# imdbcopy

./: Cargo.toml  README.md  Rocket.toml
src/: kevinbacon.rs  main.rs  repo.rs  schemas.rs
